--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.1.1",
     "axios": "^0.19.2",
     "react": "16.9.0",
+    "react-content-loader": "^5.0.2",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.6.0",
@@ -25,6 +26,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-svg": "^12.0.3",
     "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
