--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-content-loader": "^5.0.2",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-device-info": "^5.5.3",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.7.0",
